--- a/index.html
+++ b/index.html
@@ -518,21 +518,20 @@
             </div>
             <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
                 <div class="footer_main_title py-3">New Updates</div>
-                <div class="footer_makes_sub_font">Jan 31, 2023</div>
-                <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
-                <div class="footer_makes_sub_font">Feb 23, 2023</div>
+                <div class="footer_makes_sub_font"> Feb 31, 2023</div>
+                <a href="#" class="footer_post pb-4">New Lamborghini Revuelto</a>
+                <div class="footer_makes_sub_font"> Dec 31, 2023</div>
+                <a href="#" class="footer_post pb-4">ChatGPT-5 Release date</a>
+                <div class="footer_makes_sub_font"> Dec 31, 2023</div>
                 <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
-                <div class="footer_makes_sub_font">Jan 28, 2023</div>
-                <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
-                <div class="footer_makes_sub_font">Dec 31, 2022</div>
-                <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
+                <div class="footer_makes_sub_font"> Dec 31, 2023</div>
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
                 <div class="footer_main_title py-3">Tech News</div>
                 <div class="footer_makes_sub_font">Jan 31, 2023</div>
                 <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
                 <div class="footer_makes_sub_font">Feb 23, 2023</div>
-                <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
+                <a href="#" class="footer_post pb-4">OpenAI CEO ready to pause ChatGPT updates?.</a>
                 <div class="footer_makes_sub_font">Jan 28, 2023</div>
                 <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
                 <div class="footer_makes_sub_font">Dec 31, 2022</div>
