--- a/learn-python.html
+++ b/learn-python.html
@@ -193,6 +193,11 @@
                 </div>
             </div>
         </div>
+        <div class="row mx-0 animate-box" data-animate-effect="fadeInUp">
+            <div class="col-12 text-center pb-4 pt-4">
+                <a href="#" class="btn_mange_pagging">Start From Here</a>
+             </div>
+        </div>
     </div>
 </div>
 <div class="container-fluid pb-4 pt-5">
