--- a/open-ai-chatgpt.html
+++ b/open-ai-chatgpt.html
@@ -86,19 +86,19 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="black/black/index.html">CyberDocs<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">UnboxOverflow<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gadgets.html">Gadgets<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">4x4Trek<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="lifestyle.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Shop<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Resources<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="resources.html">Resources<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
