--- a/c-programming.html
+++ b/c-programming.html
@@ -83,19 +83,19 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cyberdocs/index.html">Education<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Lifestyle<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gadgets.html">Gadgets<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Free BootCamp<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="lifestyle.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="">Shop<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="">Resources<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="resources.html">Resources<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
