--- a/learn-C.html
+++ b/learn-C.html
@@ -82,19 +82,19 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="black/black/index.html">Education<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">Lifestyle<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gadgets.html">Gadgets<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">Free BootCamp<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="lifestyle.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Shop<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Resources<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="resources.html">Resources<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
