--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
                             <div class="fh5co_news_img">
-                                <img src="images/programmingLanguages/c/C Programming.png" alt=""/>
+                                <img src="images/programmingLanguages/c/C-Programming.png" alt=""/>
                             </div>
                             <div></div>
                         </div>
