--- a/learn-java.html
+++ b/learn-java.html
@@ -101,36 +101,41 @@
         </nav>
     </div>
 </div>
-<div id="fh5co-title-box" style="background-image: url(images/programmingLanguages/cpp/C++.png); background-position: 50% 90.5px;" data-stellar-background-ratio="0.5">
+<div id="fh5co-title-box" style="background-image: url(images/programmingLanguages/java/Java.png); background-position: 50% 90.5px;" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="page-title">
         <span>January 1, 2018</span>
-        <h2>How to learn CPP step by step</h2>
+        <h2>How to learn JAVA step by step</h2>
     </div>
 </div>
 <div id="fh5co-single-content" class="container-fluid pb-4 pt-4 paddding">
     <div class="container paddding">
         <div class="row mx-0">
             <div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
+                <p>Java is a popular, high-level programming language that is used to build a wide range of applications, from mobile apps to web-based software. Here are some steps you can follow to start learning Java:</p>
                 <h4>Step 1: </h4>
                 <p>
-                    Start with the basics: Learn the syntax of C++ and understand the building blocks of the language, such as variables, data types, operators, control structures, functions, arrays, and pointers. You can find many online resources and tutorials to help you learn these fundamentals.
+                    Download a Java development environment: To start writing Java code, you'll need to download and install a Java development environment such as Eclipse, IntelliJ IDEA, or NetBeans.
                 </p>
                 <h4>Step 2: </h4>
                 <p>
-                    Practice coding: The best way to learn C++ is to practice coding. Start by writing small programs that use the basic language constructs you have learned. As you gain more confidence, move on to more complex programs and challenges.
+                    Learn the basics: Start by learning the basics of Java syntax, including variables, data types, operators, control structures (such as if statements and loops), classes, and methods. There are many online tutorials, books, and videos available to help you get started.
                 </p>
                 <h4>Step 3: </h4>
                 <p>
-                    Work on projects: Projects are a great way to apply your C++ knowledge in practical settings. Choose a project that interests you, such as a game, a tool, or a simulation, and work on it step by step. This will give you a chance to practice your coding skills and see how C++ can be used in real-world scenarios.
+                    Practice writing code: Once you have a basic understanding of Java syntax, start practicing by writing small programs. You can find exercises and challenges online or in books to help you improve your skills.
                 </p>
                 <h4>Step 4: </h4>
                 <p>
-                    Collaborate with others: Joining a C++ community or working with other developers can help you learn from their experiences and get feedback on your code. You can join online forums, participate in coding challenges, or collaborate on open-source projects to improve your skills.
+                    Understand object-oriented programming: Java is an object-oriented programming language, which means that it is based on the concept of objects, which have properties and behaviors. It's important to understand how object-oriented programming works to write effective Java code.
                 </p>
                 <h4>Step 5: </h4>
                 <p>
-                    Learn from mistakes: As you practice coding and working on projects, you will inevitably make mistakes. Don't get discouraged by errors and bugs, instead use them as learning opportunities to improve your understanding of C++ and to enhance your problem-solving skills.
+                    Use resources to deepen your knowledge: There are many online resources available to help you learn Java, including online courses, forums, and documentation. Take advantage of these resources to deepen your understanding of the language and improve your skills.
+                </p>
+                <h4>Step 6: </h4>
+                <p>
+                    Build real-world projects: To apply your skills and gain experience, start building real-world projects using Java. This will help you develop your problem-solving skills and give you a sense of how Java is used in the real world.
                 </p>
             </div>
             <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
