--- a/learn-cybersec.html
+++ b/learn-cybersec.html
@@ -101,7 +101,7 @@
         </nav>
     </div>
 </div>
-<div id="fh5co-title-box" style="background-image: url(images/programmingLanguages/cpp/C++.png); background-position: 50% 90.5px;" data-stellar-background-ratio="0.5">
+<div id="fh5co-title-box" style="background-image: url(images/cyberdocs/cybersec/CyberSec.png); background-position: 50% 90.5px;" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="page-title">
         <span>January 1, 2018</span>
@@ -112,25 +112,28 @@
     <div class="container paddding">
         <div class="row mx-0">
             <div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
+                <p>
+                    Learning cybersecurity can be a challenging and rewarding journey. Here are some steps that can help you get started:
+                </p>
                 <h4>Step 1: </h4>
                 <p>
-                    Start with the basics: Learn the syntax of C++ and understand the building blocks of the language, such as variables, data types, operators, control structures, functions, arrays, and pointers. You can find many online resources and tutorials to help you learn these fundamentals.
+                    Start with the basics: To become proficient in cybersecurity, you need to have a solid foundation in computer networking, operating systems, and programming. You can start with free online courses or tutorials that cover these topics.
                 </p>
                 <h4>Step 2: </h4>
                 <p>
-                    Practice coding: The best way to learn C++ is to practice coding. Start by writing small programs that use the basic language constructs you have learned. As you gain more confidence, move on to more complex programs and challenges.
+                    Choose a specialization: Cybersecurity is a broad field, and there are many different specializations to choose from. Some of the most popular specializations include network security, web security, and ethical hacking. Choose a specialization that interests you and aligns with your career goals.
                 </p>
                 <h4>Step 3: </h4>
                 <p>
-                    Work on projects: Projects are a great way to apply your C++ knowledge in practical settings. Choose a project that interests you, such as a game, a tool, or a simulation, and work on it step by step. This will give you a chance to practice your coding skills and see how C++ can be used in real-world scenarios.
+                    Get certified: There are many cybersecurity certifications available, such as CompTIA Security+, Certified Ethical Hacker (CEH), and Certified Information Systems Security Professional (CISSP). These certifications can demonstrate your knowledge and skills to potential employers.
                 </p>
                 <h4>Step 4: </h4>
                 <p>
-                    Collaborate with others: Joining a C++ community or working with other developers can help you learn from their experiences and get feedback on your code. You can join online forums, participate in coding challenges, or collaborate on open-source projects to improve your skills.
+                    Join a community: Joining a cybersecurity community can help you stay up-to-date with the latest trends and technologies, learn from other professionals, and network with potential employers. There are many online communities and forums that you can join.
                 </p>
                 <h4>Step 5: </h4>
                 <p>
-                    Learn from mistakes: As you practice coding and working on projects, you will inevitably make mistakes. Don't get discouraged by errors and bugs, instead use them as learning opportunities to improve your understanding of C++ and to enhance your problem-solving skills.
+                    Practice, practice, practice: Cybersecurity is a hands-on field, and the best way to learn is by doing. You can practice your skills by participating in online capture-the-flag challenges, setting up your own lab environment, and experimenting with different tools and techniques.
                 </p>
             </div>
             <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
