--- a/lifestyle.html
+++ b/lifestyle.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-3 fh5co_padding_menu">
-              <a href="iamdreamer.co.in">
+              <a href="index.html">
               <img  src="images/logo.png" alt="iamdreamer.co.in" class="fh5co_logo_width">
               </a>
             </div>
