--- a/learn-cybersec.html
+++ b/learn-cybersec.html
@@ -135,6 +135,9 @@
                 <p>
                     Practice, practice, practice: Cybersecurity is a hands-on field, and the best way to learn is by doing. You can practice your skills by participating in online capture-the-flag challenges, setting up your own lab environment, and experimenting with different tools and techniques.
                 </p>
+                <p>
+                    Remember, cybersecurity is a constantly evolving field, so it's important to stay up-to-date with the latest technologies and threats. With dedication and persistence, you can become a skilled cybersecurity professional.
+                </p>
             </div>
             <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                 <div>
