--- a/Contact_us.html
+++ b/Contact_us.html
@@ -21,6 +21,14 @@
     <link href="css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
     <link href="css/style_1.css" rel="stylesheet" type="text/css"/>
     <script src="js/modernizr-3.5.0.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QWWJ4HGVMT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-QWWJ4HGVMT');
+    </script>
 </head>
 <body>
 <div class="container-fluid fh5co_header_bg">
